[tool.poetry]
name = "notice-fastapi"
version = "0.1.0"
description = ""
authors = ["seoyun75 <67564166+seoyun75@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "notice_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.92.0"
dependency-injector = "^4.37.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
