[tool.poetry]
name = "notice-fastapi"
version = "0.1.0"
description = ""
authors = ["seoyun75 <67564166+seoyun75@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "notice_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
dependency-injector = "^4.37.0"
sqlmodel = "^0.0.8"
isort = "^5.12.0"
black = "^23.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
