[tool.poetry]
name = "notice-fastapi"
version = "0.1.0"
description = ""
authors = ["seoyun75 <67564166+seoyun75@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "notice_fastapi"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.92.0"}
dependency-injector = "^4.37.0"
sqlmodel = "^0.0.8"
isort = "^5.12.0"
black = "^23.1.0"
pre-commit = "^3.2.1"
fastapi-sessions = "^0.3.2"
pytest = "^7.4.0"
httpx = "^0.24.1"
trio = "^0.22.2"

[tool.poetry.group.dev.dependencies]
pycln = "^2.2.2"

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
pythonpath = "post_fastapi"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
